--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -74,5 +74,8 @@ const textCase = 'uppercase'
       )
     }
     <Footer />
+    <script>
+      import '../scripts/menu.ts'
+    </script>
   </body>
 </html>
