--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,5 +24,8 @@ const pageTitle = '私のAstro学習ブログ'
       <li><a href="/posts/post-3/">記事3</a></li>
     </ul>
     <Footer />
+    <script>
+      import '../scripts/menu.ts'
+    </script>
   </body>
 </html>
