--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,8 @@ const pageTitle = 'ホームページ'
     <Header />
     <h1>{pageTitle}</h1>
     <Footer />
+    <script>
+      import '../scripts/menu.ts'
+    </script>
   </body>
 </html>
