--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/global/Footer.astro'
 import Header from '../components/global/Header.astro'
 
 const { title } = Astro.props
@@ -16,5 +17,6 @@ const { title } = Astro.props
   <body>
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
