--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -1,5 +1,5 @@
 ---
-
+import ThemeController from './ThemeController.astro'
 ---
 
 <header class="sticky top-0 z-10 bg-base-100 bg-opacity-90 text-base-content backdrop-blur">
@@ -8,6 +8,8 @@
     <div class="navbar-center">
       <a href="/" class="text-2xl">Containers Astro</a>
     </div>
-    <div class="navbar-end"></div>
+    <div class="navbar-end">
+      <ThemeController />
+    </div>
   </nav>
 </header>
