--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -13,6 +13,8 @@ const { title } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title}</title>
+    {/* iconify icon web component の読み込み */}
+    <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     {/* テーマの初期化 */}
     <script is:inline>
       const _colorScheme = matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark'
