--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -1,10 +1,13 @@
 ---
+import Drawer from './Drawer.astro'
 import ThemeController from './ThemeController.astro'
 ---
 
 <header class="sticky top-0 z-10 bg-base-100 bg-opacity-90 text-base-content backdrop-blur">
   <nav class="navbar">
-    <div class="navbar-start"></div>
+    <div class="navbar-start">
+      <Drawer />
+    </div>
     <div class="navbar-center">
       <a href="/" class="text-2xl">Containers Astro</a>
     </div>
