[issue/3] feat: グローバルレイアウトのデザインを整える

--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -2,20 +2,16 @@
 
 ---
 
-<label class="grid cursor-pointer place-items-center">
+<label class="grid cursor-pointer place-items-center p-2">
   <input
     type="checkbox"
     id="theme-controller"
     class="toggle col-span-2 col-start-1 row-start-1 bg-base-content hover:bg-base-content"
   />
-  <iconify-icon
-    icon="line-md:sunny-outline-loop"
-    id="theme-controller-sunny-icon"
-    class="col-start-1 row-start-1 stroke-base-content"></iconify-icon>
-  <iconify-icon
-    icon="line-md:moon-alt-loop"
-    id="theme-controller-moon-icon"
-    class="col-start-2 row-start-1 stroke-base-content"></iconify-icon>
+  <iconify-icon icon="line-md:sunny-outline-loop" id="theme-controller-sunny-icon" class="col-start-1 row-start-1"
+  ></iconify-icon>
+  <iconify-icon icon="line-md:moon-alt-loop" id="theme-controller-moon-icon" class="col-start-2 row-start-1"
+  ></iconify-icon>
 </label>
 
 {/* テーマの更新 */}
