--- a/src/components/global/Drawer.astro
+++ b/src/components/global/Drawer.astro
@@ -5,11 +5,8 @@
 <div class="drawer">
   <input type="checkbox" id="drawer" class="drawer-toggle" />
   <div class="drawer-content flex items-center">
-    <label
-      for="drawer"
-      aria-label="open sidebar"
-      class="btn-square btn-ghost drawer-button btn-sm cursor-pointer hover:bg-transparent">
-      <iconify-icon icon="mdi:menu" width="2em" height="2em" class="stroke-base-content"></iconify-icon>
+    <label for="drawer" aria-label="open sidebar" class="btn btn-square btn-ghost drawer-button">
+      <iconify-icon icon="mdi:menu" width="2em" height="2em"></iconify-icon>
     </label>
   </div>
   <div class="drawer-side">
