--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -5,20 +5,25 @@ import ThemeController from './ThemeController.astro'
 
 <header class="sticky top-0 z-10 bg-base-100 bg-opacity-90 text-base-content backdrop-blur">
   <nav class="navbar">
-    <div class="navbar-start">
+    <div class="navbar-start hidden sm:inline-flex">
       <Drawer />
     </div>
-    <div class="navbar-center">
-      <a href="/" class="text-2xl">Containers Astro</a>
+    <div class="navbar-center flex-grow sm:flex-grow-0">
+      <a
+        href="/"
+        class="btn btn-ghost no-animation btn-sm text-xl font-normal sm:btn-md hover:bg-transparent sm:text-2xl"
+        >Containers Astro</a
+      >
     </div>
-    <div class="navbar-end flex items-center gap-2">
+    <div class="navbar-end flex items-center gap-1">
+      <div class="divider divider-horizontal mx-0"></div>
       <ThemeController />
       <a
         href="https://github.com/qounme/containers-astro"
         target="_blank"
         rel="noopener"
-        class="btn-square btn-ghost btn-sm hover:bg-transparent">
-        <iconify-icon icon="mdi:github" width="2em" height="2em" class="stroke-base-content"></iconify-icon>
+        class="btn btn-square btn-ghost">
+        <iconify-icon icon="mdi:github" width="2em" height="2em"></iconify-icon>
       </a>
     </div>
   </nav>
