[issue/3] fix: SVGアイコンのサイズを修正する

--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -8,10 +8,18 @@
     id="theme-controller"
     class="toggle col-span-2 col-start-1 row-start-1 bg-base-content hover:bg-base-content"
   />
-  <iconify-icon icon="line-md:sunny-outline-loop" id="theme-controller-sunny-icon" class="col-start-1 row-start-1"
-  ></iconify-icon>
-  <iconify-icon icon="line-md:moon-alt-loop" id="theme-controller-moon-icon" class="col-start-2 row-start-1"
-  ></iconify-icon>
+  <iconify-icon
+    icon="line-md:sunny-outline-loop"
+    width="1rem"
+    height="1rem"
+    id="theme-controller-sunny-icon"
+    class="col-start-1 row-start-1 inline-block h-4 w-4"></iconify-icon>
+  <iconify-icon
+    icon="line-md:moon-alt-loop"
+    width="1rem"
+    height="1rem"
+    id="theme-controller-moon-icon"
+    class="col-start-2 row-start-1 inline-block h-4 w-4"></iconify-icon>
 </label>
 
 {/* テーマの更新 */}
