--- a/src/components/global/Drawer.astro
+++ b/src/components/global/Drawer.astro
@@ -6,7 +6,7 @@
   <input type="checkbox" id="drawer" class="drawer-toggle" />
   <div class="drawer-content flex items-center">
     <label for="drawer" aria-label="open sidebar" class="btn btn-square btn-ghost drawer-button">
-      <iconify-icon icon="mdi:menu" width="2em" height="2em"></iconify-icon>
+      <iconify-icon icon="mdi:menu" width="2rem" height="2rem" class="inline-block h-8 w-8"></iconify-icon>
     </label>
   </div>
   <div class="drawer-side">
