--- a/src/components/global/Header.astro
+++ b/src/components/global/Header.astro
@@ -23,7 +23,7 @@ import ThemeController from './ThemeController.astro'
         target="_blank"
         rel="noopener"
         class="btn btn-square btn-ghost">
-        <iconify-icon icon="mdi:github" width="2em" height="2em"></iconify-icon>
+        <iconify-icon icon="mdi:github" width="2rem" height="2rem" class="inline-block h-8 w-8"></iconify-icon>
       </a>
     </div>
   </nav>
