[issue/3] docs: コメントを記載する

--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -23,6 +23,7 @@
 </label>
 
 {/* テーマの更新 */}
+{/* デザインが一瞬だけ崩れるため is:inline を設定しておく */}
 <script is:inline>
   const _themeController = document.getElementById('theme-controller')
   const _themeControllerSunnyIcon = document.getElementById('theme-controller-sunny-icon')
