--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props
     <script is:inline src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
     {/* テーマの初期化 */}
     <script is:inline>
-      const _colorScheme = matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark'
+      const _colorScheme = matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
       const _theme = localStorage.getItem('theme') || _colorScheme
 
       document.documentElement.setAttribute('data-theme', _theme)
