[issue/3] fix: SVG画像の読み込み方法を修正する

--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -10,12 +10,14 @@
   />
   <iconify-icon
     icon="line-md:sunny-outline-loop"
+    mode="svg"
     width="1rem"
     height="1rem"
     id="theme-controller-sunny-icon"
     class="col-start-1 row-start-1 inline-block h-4 w-4"></iconify-icon>
   <iconify-icon
     icon="line-md:moon-alt-loop"
+    mode="svg"
     width="1rem"
     height="1rem"
     id="theme-controller-moon-icon"
