--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -15,14 +15,8 @@ const { title } = Astro.props
     <title>{title}</title>
     {/* iconify icon web component の読み込み */}
     <script is:inline src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
-    {/* テーマの初期化 */}
-    <script is:inline>
-      const _colorScheme = matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-      const _theme = localStorage.getItem('theme') || _colorScheme
-
-      document.documentElement.setAttribute('data-theme', _theme)
-      localStorage.setItem('theme', _theme)
-    </script>
+    {/* 全レイアウト共通処理の読み込み */}
+    <script is:inline src="/scripts/initialize_theme.js"></script>
   </head>
   <body>
     <Header />
