--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,28 @@
 import GlobalLayout from '../layouts/GlobalLayout.astro'
 ---
 
-<GlobalLayout title="Containers Astro" />
+<GlobalLayout title="Containers Astro">
+  <main class="container mx-auto my-8 flex flex-col items-center px-4 sm:px-0">
+    <h1 class="text-xl sm:text-3xl">The web framework for content-driven websites</h1>
+    <div class="my-6 flex flex-col gap-1 sm:items-center">
+      <p>Astro powers the world's fastest marketing sites, blogs, e-commerce websites, and more.</p>
+      <p>This website is for evaluating Astro's capabilities.</p>
+    </div>
+    <h2 class="my-6 text-xl sm:text-2xl">UI Components</h2>
+    <div class="grid w-full">
+      <a
+        href="/frameworks/react/single-page-application-form"
+        class="card bg-base-200 shadow-lg transition-transform hover:scale-110 sm:w-1/2 md:w-1/3 xl:w-1/4">
+        <div class="card-body">
+          <h5 class="text-lg">Single Page Application Form</h5>
+          <p>Powered by</p>
+          <ul class="list-inside list-disc text-sm">
+            <li>React</li>
+            <li>React Hook Form</li>
+            <li>Zod</li>
+          </ul>
+        </div>
+      </a>
+    </div>
+  </main>
+</GlobalLayout>
