--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -1,4 +1,5 @@
 ---
+import SpeedInsights from '@vercel/speed-insights/astro'
 import Footer from '../components/global/Footer.astro'
 import Header from '../components/global/Header.astro'
 
@@ -23,5 +24,6 @@ const { title } = Astro.props
     <Header />
     <slot />
     <Footer />
+    <SpeedInsights />
   </body>
 </html>
