--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -1,53 +1,26 @@
 ---
-const isDarkTheme = Astro.cookies.get('theme')?.value === 'dark'
+
 ---
 
-<label class="grid cursor-pointer place-items-center p-2">
-  <input
-    type="checkbox"
-    id="theme-controller"
-    class="toggle col-span-2 col-start-1 row-start-1 bg-base-content hover:bg-base-content"
-    checked={isDarkTheme}
-  />
-  <iconify-icon
-    icon="line-md:moon-alt-loop"
-    mode="svg"
-    width="1rem"
-    height="1rem"
-    id="theme-controller-moon-icon"
-    class="col-start-1 row-start-1 inline-block h-4 w-4"></iconify-icon>
-  <iconify-icon
-    icon="line-md:sunny-outline-loop"
-    mode="svg"
-    width="1rem"
-    height="1rem"
-    id="theme-controller-sunny-icon"
-    class="col-start-2 row-start-1 inline-block h-4 w-4"></iconify-icon>
-</label>
+<div id="light-theme-controller" class="flex cursor-pointer place-content-center px-1 py-2 dark:hidden">
+  <iconify-icon icon="ph:sun-fill" mode="svg" width="1.5rem" height="1.5rem" class="inline-block h-6 w-6"
+  ></iconify-icon>
+</div>
+<div id="dark-theme-controller" class="hidden cursor-pointer place-content-center px-1 py-2 dark:flex">
+  <iconify-icon icon="ph:moon-stars-fill" mode="svg" width="1.5rem" height="1.5rem" class="inline-block h-6 w-6"
+  ></iconify-icon>
+</div>
 
 {/* テーマの更新 */}
 <script>
-  const themeController = document.getElementById('theme-controller')! as HTMLInputElement
-  // iconify icon web component は専用の型になるため any を設定しておく
-  const themeControllerSunnyIcon = document.getElementById('theme-controller-sunny-icon')! as any
-  const themeControllerMoonIcon = document.getElementById('theme-controller-moon-icon')! as any
+  const lightThemeController = document.getElementById('light-theme-controller')!
+  const darkThemeController = document.getElementById('dark-theme-controller')!
 
-  const ensureCheckboxState = () => {
-    themeController.checked = document.documentElement.getAttribute('data-theme') === 'dark'
-  }
-  const updateTheme = (theme: string) => {
+  const updateTheme = (theme: 'light' | 'dark') => {
     document.documentElement.setAttribute('data-theme', theme)
-    document.cookie = `theme=${encodeURIComponent(theme)};max-age=${60 * 60 * 24 * 365};path=/`
-  }
-  const restartThemeControllerIconAnimation = () => {
-    themeControllerSunnyIcon.restartAnimation()
-    themeControllerMoonIcon.restartAnimation()
+    localStorage.setItem('theme', theme)
   }
 
-  themeController.addEventListener('change', () => {
-    restartThemeControllerIconAnimation()
-    updateTheme(themeController.checked ? 'dark' : 'light')
-  })
-  // 初回リクエスト時などの cookies からテーマ情報が取得できない場合を考慮しておく
-  ensureCheckboxState()
+  lightThemeController.addEventListener('click', () => updateTheme('dark'))
+  darkThemeController.addEventListener('click', () => updateTheme('light'))
 </script>
