[issue/16] feat: グローバルヘッダーのデザインを整える

--- a/src/components/global/Drawer.astro
+++ b/src/components/global/Drawer.astro
@@ -5,8 +5,10 @@
 <div class="drawer">
   <input type="checkbox" id="drawer" class="drawer-toggle" />
   <div class="drawer-content flex items-center">
-    <label for="drawer" aria-label="open sidebar" class="btn btn-square btn-ghost drawer-button">
-      <iconify-icon icon="mdi:menu" mode="svg" width="2rem" height="2rem" class="inline-block h-8 w-8"></iconify-icon>
+    <label for="drawer" aria-label="open sidebar" class="btn-ghost drawer-button cursor-pointer rounded p-1">
+      <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M3 6h18v2H3zm0 5h18v2H3zm0 5h18v2H3z"></path>
+      </svg>
     </label>
   </div>
   <div class="drawer-side">
