--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div id="light-theme-controller" class="flex cursor-pointer place-content-center px-1 py-2 dark:hidden">
+<div id="light-theme-controller" class="btn-ghost flex cursor-pointer place-content-center rounded p-1 dark:hidden">
   {/* ph:sun-fill */}
   {/* @see https://icon-sets.iconify.design/ph/sun-fill/ */}
   <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" viewBox="0 0 256 256">
@@ -12,7 +12,7 @@
     ></path>
   </svg>
 </div>
-<div id="dark-theme-controller" class="hidden cursor-pointer place-content-center px-1 py-2 dark:flex">
+<div id="dark-theme-controller" class="btn-ghost hidden cursor-pointer place-content-center rounded p-1 dark:flex">
   {/* ph:moon-stars-fill */}
   {/* @see https://icon-sets.iconify.design/ph/moon-stars-fill/ */}
   <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" viewBox="0 0 256 256">
