--- a/src/components/global/Drawer.astro
+++ b/src/components/global/Drawer.astro
@@ -6,6 +6,8 @@
   <input type="checkbox" id="drawer" class="drawer-toggle" />
   <div class="drawer-content flex items-center">
     <label for="drawer" aria-label="open sidebar" class="btn-ghost drawer-button cursor-pointer rounded p-1">
+      {/* mdi:menu */}
+      {/* @see https://icon-sets.iconify.design/mdi/menu/ */}
       <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
         <path fill="currentColor" d="M3 6h18v2H3zm0 5h18v2H3zm0 5h18v2H3z"></path>
       </svg>
