--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -19,10 +19,10 @@ const { title } = Astro.props
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@100..900&display=swap" rel="stylesheet" />
+    {/* テーマの初期化 */}
+    <script is:inline src="/scripts/initialize_theme.js"></script>
     {/* iconify icon web component の読み込み */}
     <script is:inline src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
-    {/* 全レイアウト共通処理の読み込み */}
-    <script is:inline src="/scripts/initialize_theme.js"></script>
   </head>
   <body>
     <Header />
