[issue/5] feat: ヘッダーアイコンのデザインを変更する

--- a/src/components/global/Drawer.astro
+++ b/src/components/global/Drawer.astro
@@ -5,12 +5,8 @@
 <div class="drawer">
   <input type="checkbox" id="drawer" class="drawer-toggle" />
   <div class="drawer-content flex items-center">
-    <label for="drawer" aria-label="open sidebar" class="btn-ghost drawer-button cursor-pointer rounded p-1">
-      {/* mdi:menu */}
-      {/* @see https://icon-sets.iconify.design/mdi/menu/ */}
-      <svg xmlns="http://www.w3.org/2000/svg" width="2rem" height="2rem" viewBox="0 0 24 24">
-        <path fill="currentColor" d="M3 6h18v2H3zm0 5h18v2H3zm0 5h18v2H3z"></path>
-      </svg>
+    <label for="drawer" aria-label="open sidebar" class="btn btn-square btn-ghost drawer-button no-animation">
+      <iconify-icon icon="mdi:menu" width="2rem" height="2rem" class="inline-block size-8"></iconify-icon>
     </label>
   </div>
   <div class="drawer-side">
