--- a/src/components/global/ThemeController.astro
+++ b/src/components/global/ThemeController.astro
@@ -2,25 +2,11 @@
 
 ---
 
-<div id="light-theme-controller" class="btn-ghost flex cursor-pointer place-content-center rounded p-1 dark:hidden">
-  {/* ph:sun-fill */}
-  {/* @see https://icon-sets.iconify.design/ph/sun-fill/ */}
-  <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" viewBox="0 0 256 256">
-    <path
-      fill="currentColor"
-      d="M120 40V16a8 8 0 0 1 16 0v24a8 8 0 0 1-16 0m8 24a64 64 0 1 0 64 64a64.07 64.07 0 0 0-64-64m-69.66 5.66a8 8 0 0 0 11.32-11.32l-16-16a8 8 0 0 0-11.32 11.32Zm0 116.68l-16 16a8 8 0 0 0 11.32 11.32l16-16a8 8 0 0 0-11.32-11.32M192 72a8 8 0 0 0 5.66-2.34l16-16a8 8 0 0 0-11.32-11.32l-16 16A8 8 0 0 0 192 72m5.66 114.34a8 8 0 0 0-11.32 11.32l16 16a8 8 0 0 0 11.32-11.32ZM48 128a8 8 0 0 0-8-8H16a8 8 0 0 0 0 16h24a8 8 0 0 0 8-8m80 80a8 8 0 0 0-8 8v24a8 8 0 0 0 16 0v-24a8 8 0 0 0-8-8m112-88h-24a8 8 0 0 0 0 16h24a8 8 0 0 0 0-16"
-    ></path>
-  </svg>
+<div id="light-theme-controller" class="btn btn-square btn-ghost no-animation btn-sm inline-flex dark:hidden">
+  <iconify-icon icon="ph:sun-fill" width="1.5rem" height="1.5rem" class="inline-block size-6"></iconify-icon>
 </div>
-<div id="dark-theme-controller" class="btn-ghost hidden cursor-pointer place-content-center rounded p-1 dark:flex">
-  {/* ph:moon-stars-fill */}
-  {/* @see https://icon-sets.iconify.design/ph/moon-stars-fill/ */}
-  <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" viewBox="0 0 256 256">
-    <path
-      fill="currentColor"
-      d="M240 96a8 8 0 0 1-8 8h-16v16a8 8 0 0 1-16 0v-16h-16a8 8 0 0 1 0-16h16V72a8 8 0 0 1 16 0v16h16a8 8 0 0 1 8 8m-96-40h8v8a8 8 0 0 0 16 0v-8h8a8 8 0 0 0 0-16h-8v-8a8 8 0 0 0-16 0v8h-8a8 8 0 0 0 0 16m65.14 94.33A88.07 88.07 0 0 1 105.67 46.86a8 8 0 0 0-10.6-9.06A96 96 0 1 0 218.2 160.93a8 8 0 0 0-9.06-10.6"
-    ></path>
-  </svg>
+<div id="dark-theme-controller" class="btn btn-square btn-ghost no-animation btn-sm hidden dark:inline-flex">
+  <iconify-icon icon="ph:moon-stars-fill" width="1.5rem" height="1.5rem" class="inline-block size-6"></iconify-icon>
 </div>
 
 {/* テーマの更新 */}
